gcc/testsuite/rust.test/fail_compilation/func1.rs
fn test(x: i32) -> bool {
    return x + 1;
}

fn main() {
    let an_integer = 5;

    let call_test = test(1);
}
